<resources>
    <string name="app_name">ChatMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mei duis legimus accusamus ea. Et mei ceteros inimicus. Graeco facilis an eos, doming sensibus duo ad. Omnium recteque duo at, at ius magna persequeris. Sit consequat rationibus ea, pro id admodum volumus tibique, nam diam graecis petentium ad. Ex fugit tantas consetetur eum, vel an legendos persecuti persequeris, aliquid voluptatibus ex eam.</string>


    <!--Auth Strings-->
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Konfirmasi Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="register_word">Belum punya akun?</string>
    <string name="login_word">Sudah memiliki akun?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_bot">Bot</string>

    <!-- Notification ID -->
    <string name="default_notification_channel_id">NOTIF_MANTAP_CHATMAN</string>
    <string name="default_notification_channel_name" translatable="true">Message</string>
    <string name="notification_channel_description">Notifikasi dari chat</string>


    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="update">Update Notification</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="notification_channel_name">Mascot Notification</string>


    <string name="send_message_button">Send message button</string>
    <string name="message">Message</string>
    <string name="insert_an_registered_email">Insert an registered email</string>
    <string name="start_chat">Start Chat</string>
    <string name="cancel">Cancel</string>
    <string name="room_already_exists">Room is already exist</string>
</resources>

