<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/insert_an_registered_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/email" />
</LinearLayout>