<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/auth_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:orientation="vertical">

        <!-- Etsi logo and title -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- form nama -->

            <EditText
                android:id="@+id/auth_name"
                style="@style/auth_form_input"
                android:layout_margin="3dp"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <!-- form email -->
            <EditText
                android:id="@+id/auth_email"
                style="@style/auth_form_input"
                android:layout_margin="3dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <!-- form password -->
            <EditText
                android:id="@+id/auth_password"
                style="@style/auth_form_input"
                android:layout_margin="3dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <!-- form konfirmasi password -->
            <EditText
                android:id="@+id/auth_confirm"
                style="@style/auth_form_input"
                android:layout_margin="3dp"
                android:hint="@string/confirm"
                android:inputType="textPassword" />

            <!-- TODO: add role checkbox -->

            <Button
                android:id="@+id/auth_login"
                style="@style/normal_button"
                android:onClick="login"
                android:background="@drawable/button_round"
                android:text="@string/login" />

            <Button
                android:id="@+id/auth_register"
                style="@style/normal_button"
                android:onClick="register"
                android:background="@drawable/button_round"
                android:layout_marginBottom="20dp"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/auth_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/register_word"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/small_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/auth_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="switchAction"
                    android:padding="4dp"
                    android:text="@string/register"
                    android:textSize="@dimen/small_text"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>